feat: add install

--- a/learn.html
+++ b/learn.html
@@ -62,7 +62,7 @@
           </ul>
 
           <div class="nav-actions">
-            <a href="#" class="nav-btn secondary">Export</a>
+            <a href="#"  class="nav-btn secondary" id="installBtn">Install</a>
             <a href="#" class="nav-btn primary">Help</a>
           </div>
         </div>
