--- a/learn.html
+++ b/learn.html
@@ -6,9 +6,11 @@
     <title>Slide Memorizer</title>
     <link rel="stylesheet" href="./css/nav.css" />
     <link rel="stylesheet" href="./css/learn.css" />
+    <link rel="manifest" href="manifest.json">
 
     <script src="./js/nav.js" type="module"></script>
     <script src="./js/learn.js" type="module"></script>
+
   </head>
   <body>
     <nav class="navbar" id="navbar">
