--- a/learn.html
+++ b/learn.html
@@ -65,7 +65,7 @@
 
           <div class="nav-actions">
             <a href="#"  class="nav-btn secondary" id="installBtn">Install</a>
-            <a href="#" class="nav-btn primary">Help</a>
+            <a href="./help.html" class="nav-btn primary">Help</a>
           </div>
         </div>
       </div>
