--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <h3 class="feature-title">How can I use it ?</h3>
               <p class="feature-text">
                 - Click on the "Learn" button to start learning slides. <br />
-                - Cliick on the "Test" button to test your knowledge. (Find it
+                - Click on the "Test" button to test your knowledge. (Find it
                 in the nav bar)<br />
                 - Use the "Help" button if you need any assistance.
               </p>
