feat: network status bar

--- a/learn.html
+++ b/learn.html
@@ -71,6 +71,11 @@
         </div>
       </div>
     </nav>
+        <div id="statusIndicator">
+      <span id="offlineStatus">Offline</span>
+      <span id="onlineStatus">Online</span>
+      
+    </div>
     <main class="main-content">
       <section class="content-section">
         <div class="content-container">
