--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="./css/nav.css" />
     <link rel="stylesheet" href="./css/main.css" />
     <script src="./js/nav.js" type="module"></script>
-    <link rel="manifest" href="manifest.json">
-    <link rel="shortcut icon" href="./images/slider-512.png" type="image/x-icon">
+    <link rel="manifest" href="manifest.json" />
+    <link
+      rel="shortcut icon"
+      href="./images/slider-512.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <nav class="navbar" id="navbar">
@@ -71,12 +75,14 @@
     <div id="statusIndicator">
       <span id="offlineStatus">Offline</span>
       <span id="onlineStatus">Online</span>
-
     </div>
     <main class="main-content">
       <section class="hero-section">
         <div class="hero-container">
-          <h1 class="hero-title">I know why YOU are here</h1>
+          <h1 class="hero-title">
+            I know why <span id="special-you" data-text="YOU">YOU</span> are
+            here
+          </h1>
           <p class="hero-description">I know what kind of man you are</p>
           <div class="hero-buttons">
             <button
@@ -133,8 +139,8 @@
               <h3 class="feature-title">How can I use it ?</h3>
               <p class="feature-text">
                 - Click on the "Learn" button to start learning slides. <br />
-                - Click on the "Test" button to test your knowledge. (Find it
-                in the nav bar)<br />
+                - Click on the "Test" button to test your knowledge. (Find it in
+                the nav bar)<br />
                 - Use the "Help" button if you need any assistance.
               </p>
             </div>
@@ -175,7 +181,8 @@
               <h3 class="feature-title">What should I do if I am offline ?</h3>
               <p class="feature-text">
                 - You can use the app in offline mode too. <br />
-                - Previously viewed slides and images will still be available.<br />
+                - Previously viewed slides and images will still be
+                available.<br />
                 - Refresh the page when you have an internet connection to
                 update slides.
               </p>
