add : temp redirect to number test

--- a/test.html
+++ b/test.html
@@ -6,12 +6,20 @@
     <title>Slide Memorizer</title>
     <link rel="stylesheet" href="./css/nav.css" />
     <link rel="stylesheet" href="./css/test.css" />
-    <link rel="manifest" href="manifest.json">
-    <link rel="shortcut icon" href="./images/slider-512.png" type="image/x-icon">
+    <link rel="manifest" href="manifest.json" />
+    <link
+      rel="shortcut icon"
+      href="./images/slider-512.png"
+      type="image/x-icon"
+    />
 
     <script src="./js/nav.js" type="module"></script>
     <script src="./js/test.js" type="module"></script>
 
+    <meta
+      http-equiv="refresh"
+      content="0; url=https://criticalcarpet.github.io/slide-memorizer/test-number.html"
+    />
   </head>
   <body>
     <nav class="navbar" id="navbar">
@@ -65,14 +73,14 @@
           </ul>
 
           <div class="nav-actions">
-            <a href="#"  class="nav-btn secondary" id="installBtn">Install</a>
+            <a href="#" class="nav-btn secondary" id="installBtn">Install</a>
             <a href="./help.html" class="nav-btn primary">Help</a>
           </div>
         </div>
       </div>
     </nav>
     <main class="main-content">
-              <section class="hero-section">
+      <section class="hero-section">
         <div class="hero-container">
           <h1 class="hero-title">Work in Progress</h1>
           <p class="hero-description">Please be patient</p>
